--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <title>{{ title }}</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="{{ 'style/style.css' | prefixedUrl }}">
   </head>
   <body>
     {% include "nav.njk" %}
     <main>{{ content | safe }}</main>
     {% for post in collections.post %}
-      <li><a href="{{ post.url }}">{{ post.data.title }}</a> – {{ post.date }}</li>
+      <li><a href="{{ post.url | prefixedUrl }}">{{ post.data.title }}</a> – {{ post.date }}</li>
     {% endfor %}
   </body>
 </html>
