--- a/_includes/nav.njk
+++ b/_includes/nav.njk
@@ -1,6 +1,8 @@
  <!-- _includes/nav.njk -->
 <nav>
 	<ul>
-	  <li><a href="/">home</a></li>
+	  <li><a href="/">zzz...</a></li>
+	  <li><a href="/about/">about</a></li>
+	  <li><a href="/posts/post1/">last night</a></li>
 	</ul>
 </nav>
