--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -1,11 +1,13 @@
-<!--- pulls in content from our base.njk layout ---> 
+<!--- pulls in content from our layout.njk layout ---> 
 {% extends "layout.njk" %}
+{% include "nav.njk" %}
 
 <!-- block and endblock tags can be used when we want to inject custom code into our template -->
 {% block content %}
   <article>
     <h2>{{ title }}</h2>
-    <p><em>{{ date }}</em></p>
+    <p><em>{{ date  }}</em></p>
+    <p><em>{{ mood }}</em></p>
     {{ content | safe }}
   </article>
 {% endblock %}
