wrong js file - fixed

--- a/_includes/home.njk
+++ b/_includes/home.njk
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <div class="titleCont">
-        <h1>still awake</h1>
+        <h1 onClick="changeBG()">still : awake</h1>
     </div>
 
     <!-- <div class="postContainer">
@@ -13,6 +13,7 @@
         </div>
     {% endfor %}
 </div> -->
+
 </div>
 
 {% endblock %}
