--- a/docs/style/nav.css
+++ b/docs/style/nav.css
@@ -1,6 +1,6 @@
 nav ul{
    display: flex; 
    flex-direction: row; 
-   justify-content: center;
+   justify-content: space-around;
    list-style: none;
 }
