--- a/style/home.css
+++ b/style/home.css
@@ -11,3 +11,19 @@
   font-size: 8vw;
   text-align: center;
 }
+
+h1:hover{
+  color: red;
+  cursor: pointer;
+  animation: blink 1s infinite;
+}
+
+@keyframes blink{
+  0%, 49%{
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+}
