--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -5,9 +5,17 @@
 <!-- block and endblock tags can be used when we want to inject custom code into our template -->
 {% block content %}
   <article>
-    <h2>{{ title }}</h2>
-    <p><em>{{ date }}</em></p>
-    <p><em>{{ mood }}</em></p>
-    {{ content | safe }}
+    <div class="pageContainer">
+      <div class="left">
+        <h2>{{ title }}</h2>
+        <p><em>{{ date | readableDate}}</em></p>
+        <p><em>mood: {{ mood }}</em></p>
+        <p><em>what i was working on: {{ content | safe }}</em></p>
+      </div>
+
+      <div class="right">
+        
+      </div>
+    </div>
   </article>
 {% endblock %}
