--- a/style/home.css
+++ b/style/home.css
@@ -4,26 +4,73 @@
   align-items: center;
   justify-content: center;
   width: 100%;
+  margin: 0;
+
+  position: relative;
+  overflow: visible;
 }
 
-/* keep h1 responsive */
 .container h1 {
   font-size: 8vw;
   text-align: center;
 }
 
-h1:hover{
+h1.title{
   color: red;
+  opacity: 0;
+  font-family: "digital";
+  font-weight: 500;
+  font-size: 10vw;
+  text-align: center;
+  margin: 0;
+  margin-top: 20%;
+}
+
+h1:hover{
   cursor: pointer;
   animation: blink 1s infinite;
 }
+
 
 @keyframes blink{
   0%, 49%{
     opacity: 0;
   }
 
-  50% {
+  50%, 100% {
     opacity: 1;
   }
+}
+
+.videoBG {
+  position: fixed; /* cover the viewport */
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 0;
+  opacity: 0;
+  transition: opacity 3s ease-in-out;
+  filter: brightness(500%);
+  pointer-events: none; /* allow clicks through to the title */
+}
+
+.titleCont, .titleCont {
+  position: relative;
+  z-index: 1; /* text above image */
+}
+
+.postContainer{
+  font-family: "plastic";
+  font-weight: 500;
+  font-size: 5vw;
+  text-align: center;
+
+  z-index: 1;
+
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
 }
