--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -8,14 +8,25 @@
     <div class="pageContainer">
       <div class="left">
         <h2>{{ title }}</h2>
-        <p><em>{{ date | readableDate}}</em></p>
-        <p><em>mood: {{ mood }}</em></p>
-        <p><em>what i was working on: {{ content | safe }}</em></p>
+        <p>{{ date | readableDate}}</p>
+        <p>mood: {{ mood }}</p>
+        <h3>thoughts:</h3>
+          <em>{{ content | safe }}</em>
       </div>
 
       <div class="right">
-        
+        <div class="postImgCont">
+          {% if image %}
+            {% set photoPath = image | replace('../','') %}
+            <img src="{{ photoPath | prefixedUrl }}" class="postImg">
+          {% endif %}
+        </div>
+      
+        <div class="timeText">
+          <p>time: {{ time }}</p>
+        </div>
       </div>
+      
     </div>
   </article>
 {% endblock %}
