--- a/docs/style/post.css
+++ b/docs/style/post.css
@@ -1,31 +1,56 @@
 body{
     font-family:'Courier New', Courier, monospace;
     font-size: 2vw;
+    
+    overflow: hidden;
 }
 
 .pageContainer{
     width: 100%;
+    height: 100%;
     text-align: left;
     margin-left: 5%;
     margin-right: 5%;
 
     display: flex;
-    height: 100%;
-    overflow: hidden;
+    flex-direction: row;
 }
 
 .left {
-  flex: 1; /* Allow the left section to take up available space */
-  width: 50%; /* Set initial width to half */
-  /* If you want the left section to have its own scrollbar: */
-  /* overflow-y: scroll; */
-  /* Or if you want it fixed: */
-  /* position: sticky; */
-  /* top: 0; */
+  width: 40%; 
+  margin-right: 5%;
+  
 }
 
 .right {
-  flex: 1; /* Allow the right section to take up available space */
-  width: 50%; /* Set initial width to half */
-  overflow-y: scroll; /* Enable vertical scrolling for this section */
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  /* overflow-y: scroll;  */
+  justify-content: center;
+  align-items: center;
+  margin-right: 5%;
+  border-left: 2px dashed white;
 }
+
+.postImg{
+    width: auto;
+    height: 70vh;
+    padding: 5%;
+    border-style: dashed;
+    border-width: 4px;
+    outline-offset: 50px;
+}
+
+h3{
+    margin-top: 25%;
+    margin-bottom: 0;
+}
+
+.left p{
+    margin: 0;
+}
+
+.timeText{
+    font-size: 1vw;
+}  
