--- a/_includes/home.njk
+++ b/_includes/home.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
 <video playsinline muted loop class="videoBG" id="videoBG">
-    <source src="../assets/clouds.mp4" type="video/mp4">
+    <source src="assets/clouds.mp4" type="video/mp4">
 </video>
 
 <div class="container">
