--- a/_includes/nav.njk
+++ b/_includes/nav.njk
@@ -4,10 +4,10 @@
 	  <li><a href="/">
 		<img src="assets/pillow.png" alt="pillow icon" class="pillowImg">
 		</a></li>
-	  <li><a href="/"> </a></li>
+	  <!-- <li><a href="/"> </a></li>
 
 	    {% if featured %}
     		<div class="lastNight">last night</div>
-  		{% endif %} 
+  		{% endif %}  -->
 	</ul>
 </nav>
