--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -26,7 +26,7 @@
     <!-- conditional to make the js load on just the home page
      if home or if tag =='home', src.-->
     {% if tags == 'home' %}
-     <script src="script/script.js"></script>
+     <script src="{{ 'script/script.js' | prefixedUrl }}"></script>
     {% endif %}
     
   </body>
