--- a/style/home.css
+++ b/style/home.css
@@ -17,6 +17,7 @@
 
 h1.title{
   color: red;
+  text-shadow: 0px 0px 15px rgb(249, 0, 0);
   opacity: 0;
   font-family: "digital";
   font-weight: 500;
