--- a/_includes/nav.njk
+++ b/_includes/nav.njk
@@ -1,7 +1,7 @@
  <!-- _includes/nav.njk -->
 <nav>
 	<ul>
-	  <li><a href="/">
+	  <li><a href="{{'/' | prefixedUrl}}">
 		<img src="{{'/assets/pillow.png' | prefixedUrl}}" alt="pillow icon" class="pillowImg">
 		</a></li>
 	  <!-- <li><a href="/"> </a></li>
