--- a/style/home.css
+++ b/style/home.css
@@ -16,8 +16,8 @@
 }
 
 h1.title{
-  color: red;
-  text-shadow: 0px 0px 15px rgb(249, 0, 0);
+  color: rgb(240, 0, 0);
+  text-shadow: 0px 0px 15px rgb(255, 0, 0);
   opacity: 0;
   font-family: "digital";
   font-weight: 500;
